# DroneAR

./: .dockerignore  .gitignore  Dockerfile  README.md  README_English.md  README_ML2_Vulkan.md  docker-compose.yml  requirements.txt
configs/: dut_drone.yaml
cpp/: CMakeLists.txt  drone_detector.cpp  drone_detector.h  mlsdk_glue.md  test_host.cpp
docs/: ML2_ONDEVICE_RUNBOOK.md
scripts/: bench_gpu.py  bench_latency.py  dataset_stats.py  eval.py  export.py  parity_ncnn.py  predict.py  train.py  train_all.sh  voc2yolo.py
weights/: latency_gpu.md  latency_report.md  metrics.json  parity_ncnn.md  parity_ref.csv  parity_ref.json  yolo26n_drone_640_int8.onnx  yolo26n_drone_960_int8.onnx
weights/yolo26n_drone_640_ncnn_model/: metadata.yaml  model_ncnn.py
